@@ -1,3 +1,8 @@
+2005-05-02  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/DevDiscover.pm (applySelectors):
+	The infrastructure for object selectors
+
 2005-04-29  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/DevDiscover/CiscoGeneric.pm:
